--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,11 @@ body {
   justify-content: center;
 }
 
+.btns {
+  display: flex;
+  margin-bottom: 1.25rem;
+}
+
 .maze-btn {
   background-color: #0091ff;
   margin: 0.625rem;
@@ -43,6 +48,10 @@ body {
   background-color: black;
 }
 
+.cell.visited {
+  background-color: #489bdb;
+}
+
 .cell.path {
   background-color: whitesmoke;
 }
@@ -53,4 +62,44 @@ body {
 
 .cell.end {
   background-color: red;
+}
+
+
+
+@media screen and (max-width: 768px) {
+  .cell {
+    width: 2rem;
+    height: 2rem;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .cell {
+    width: 1.5rem;
+    height: 1.5rem;
+  }
+  .btns {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 0.5rem;
+  }
+  .maze-btn {
+    margin: 0.25rem;
+    padding: 0.5rem 1rem;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .cell {
+    width: 3rem;
+    height: 3rem;
+  }
+  .btns {
+    display: flex;
+    margin-bottom: 1.5rem;
+  }
+  .maze-btn {
+    margin: 0.75rem;
+    padding: 0.75rem 1.5rem;
+  }
 }
